<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>menuWidget</class>
 <widget class="QWidget" name="menuWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>634</width>
    <height>474</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_4" stretch="20,0,5">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout" stretch="5,20,0,0">
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
        <number>2</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
         <string>好友</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="QListWidget" name="friendList_LW"/>
         </item>
         <item>
          <widget class="QPushButton" name="addFriend_PB">
           <property name="text">
            <string>添加好友</string>
           </property>
          </widget>
         </item>
        </layout>
       </widget>
       <widget class="QWidget" name="tab_2">
        <attribute name="title">
         <string>讨论组</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
          <widget class="QListWidget" name="groupList_LW"/>
         </item>
        </layout>
       </widget>
       <widget class="QWidget" name="tab_3">
        <attribute name="title">
         <string>文件</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_3"/>
       </widget>
      </widget>
     </item>
     <item>
      <widget class="QFrame" name="frame">
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
      </widget>
     </item>
     <item alignment="Qt::AlignTop">
      <widget class="QPushButton" name="meetinglist_PB">
       <property name="text">
        <string>会议列表</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QListWidget" name="meetingList_LW"/>
     </item>
    </layout>
   </item>
   <item alignment="Qt::AlignRight">
    <widget class="QPushButton" name="createMeeting_PB">
     <property name="text">
      <string> 创建会议</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QTableWidget" name="fileList_TW">
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <column>
      <property name="text">
       <string>发送者</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>接受者</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>文件名</string>
      </property>
     </column>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
